--- a/index.html
+++ b/index.html
@@ -9,137 +9,153 @@
 <body>
 
   <div class="main-nav">
-      <ul class="nav">
-        <li><a class="nav-a name" href="#">Home</a></li>
-        <li><a class="nav-a" href="#sec_experience">Experience</a></li>
-        <li><a class="nav-a" href="#sec_education">Education</a></li>
-        <li><a class="nav-a" href="#sec_skills">Skills</a></li>
-        <li><a class="nav-a" href="#sec_projects">Projects</a></li>
-      </ul>
+	  <ul class="nav">
+		<li><a class="nav-a name" href="#">Home</a></li>
+		<li><a class="nav-a" href="#sec_experience">Experience</a></li>
+		<li><a class="nav-a" href="#sec_education">Education</a></li>
+		<li><a class="nav-a" href="#sec_skills">Skills</a></li>
+		<li><a class="nav-a" href="#sec_projects">Projects</a></li>
+	  </ul>
   </div>
 
   <header>
-    <img src="images/van.jpg" alt="Drawing of Van Tran" class="profile-image">
-    <h1 class="tag name">Hello, I'm Tran Huu Van</h1>
-    <p class="tag location">Ho Chi Minh, Vietnam</p>
-    <p class="tag">huuvan20@gmail.com | 0901188672</p>
+	<img src="images/van.jpg" alt="Drawing of Van Tran" class="profile-image">
+	<h1 class="tag name">Hello, I'm Tran Huu Van</h1>
+	<p class="tag location">Ho Chi Minh, Vietnam</p>
+	<p class="tag">huuvan20@gmail.com | 0901188672</p>
   </header>
 
   <main>
 
   <div class="flex">
 
-      <div class="card">
-          <legend><a name="sec_experience" class="number">1</a>Experience</legend>
-          <time>02/2016 - Present</time>
-          <label>Front End Web Development <a target="_blank" href="https://teamtreehouse.com/techdegree/front-end-web-development" class="link_there">link there</a></label>
-          <p>Techdegree Program - TreeHouse</p>
-            <ul>
-              <li>An advanced program of 24 courses, 12 real-world projects to build a strong technical foundation, focusing on in-demand Front End skills of HTML, CSS, Javascript, Development Tools & more.</li>
-              <li>Currently working on the project 7 over 12 challenging ones. Results: Exceed Expectations grades of 6 projects.</li>
-              <li>Accessing Slack community to interact with other students on solving problems. Helping other students correcting bugs, errors. Reviewing the projects for the others before being submitted to teachers.</li>
-            </ul>
+	  <div class="card">
+		  <legend><a name="sec_experience" class="number">1</a>Experience</legend>
 
-          <time>05/2015 - Present</time>
-          <label>Learning at Treehouse <a target="_blank" href="https://teamtreehouse.com/huuvantran" class="link_there">link there</a></label>
-          <p>http://teamtreehouse.com</p>
-              <p>Intermediate level (12,628 pts) focusing on Front End skills: Javascript (3,889 pts), CSS (3,847 pts), HTML (1,363 pts) & MySQL, PHP, Wordpress.</p>
-              <ul>
-                <li>GitHub Basics</li>
-                <li>DOM | Debugging HTML & CSS Problems</li>
-                <li>Float & Flexbox Layout | SMACSS & Sass-Refactoring-Modulars</li>
-                <li>Media Queries & Responsive Layout | SVG - Transitions & Transforms</li>
-                <li>Object-Oriented JavaScript - JQuery Basics & plugins</li> 
-                <li>MySQL, PHP, Wordpress Basics</li>
-              </ul>
+		  <time>12/2013 - Present</time>
+		  <label>Full stack web developer <span class="current-job">currently</span></label>
+		  <p>Prime Labo - An offshore software development company from Japan</p>
+		  	<label>Job Bank Vietnam project</label>
+		  	<ul>
+		  		<li>Job Bank Vietnam is an HR site which provides about 30.000 jobs mainly focusing on IT.</li>
+		  		<li>An own product from Prime Labo team, based on the CakePHP 2 framework, MVC architecture.</li>
+		  		<li>Replace the whole template by Job Monster theme, under construction...</li>
+		  		<li><b>Practical skills</b> PHP, CakePHP 2, MVC, Front end skils, JS (JQuery, AJAX)</li>
+		  	</ul>
+			
 
-          <time>03/2013 - Present</time>
-          <label>Field Engineer <span class="current-job">currently</span></label>
-          <p>Graduated from FEDP - Field Engineer Development Program in Schindler Vietnam</p>
-      </div>
+		  <time>02/2016 - Present</time>
+		  <label>Front End Web Development <a target="_blank" href="https://teamtreehouse.com/techdegree/front-end-web-development" class="link_there">link there</a></label>
+		  <p>Techdegree Program - TeamTreeHouse</p>
+			<ul>
+			  <li>An advanced program of 24 courses, 12 real-world projects to build a strong technical foundation, focusing on in-demand Front End skills of HTML, CSS, Javascript, Development Tools & more.</li>
+			  <li>Currently working on the project 7 over 12 challenging ones. Results: Exceed Expectations grades of 6 projects.</li>
+			  <li>Accessing Slack community to interact with other students on solving problems. Helping other students correcting bugs, errors. Reviewing the projects for the others before being submitted to teachers.</li>
+			</ul>
 
-      <div class="card">
-          <legend><a name="sec_education" class="number">2</a>Education</legend>
-          <time>2014 - 2015</time>
-          <label>Master degree - Controls, Systems & Information Technology</label>
-          <p>Grenoble Alpes University - Joshep Fourier University</p>
-          <a target="_blank" href="images/master_degree.jpg"><img class="lb-img" src="images/master_degree.jpg" alt="Master degree of Controls, Systems and Information Technology"></a>
+		  <time>05/2015 - Present</time>
+		  <label>Learning at Treehouse <a target="_blank" href="https://teamtreehouse.com/huuvantran" class="link_there">link there</a></label>
+		  <p>http://teamtreehouse.com</p>
+			  <p>Intermediate level (12,628 pts) focusing on Front End skills: Javascript (3,889 pts), CSS (3,847 pts), HTML (1,363 pts) & MySQL, PHP, Wordpress.</p>
+			  <ul>
+			  	<li>PHP, CakePHP framework, MVC architecture</li>
+				<li>Git basics</li>
+				<li>DOM | Debugging HTML & CSS</li>
+				<li>Float & Flexbox Layout | SMACSS & Sass-Refactoring-Modulars</li>
+				<li>Responsive & Mobile first approach | SVG - Transitions & Transforms</li>
+				<li>Object-Oriented JavaScript - JQuery & it's plugins - very practical skills</li> 
+				<li>Wordpress at the beginning</li>
+			  </ul>
 
-          <time>2007 - 2012</time>
-          <label>Engineering degree - Telecommunications</label>
-          <p>Ho Chi Minh city University of Technology - PFIEV program for excellent engineers</p>
+		  <time>03/2013 - 12/2016</time>
+		  <label>Field Engineer</label>
+		  <p>Graduated from FEDP - Field Engineer Development Program in Schindler Vietnam</p>
 
-          <legend name="sec_skills"><a name="sec_skills" class="number">3</a>Frontend & Backend skills</legend>
-          <div class="pie-chart">
-            <div class="skills">
-              <div class="pie" data-start="0" data-value="39"></div>
-              <div class="pie" data-start="39" data-value="109"></div>
-              <div class="pie" data-start="148" data-value="110"></div>
-              <div class="pie" data-start="258" data-value="30"></div>
-              <div class="pie" data-start="288" data-value="40"></div>
-              <div class="pie" data-start="328" data-value="32"></div>
-            </div>
-            <ul class="skills-labels">
-              <li><span class="labels label-HTML"></span>HTML</li>
-              <li><span class="labels label-CSS"></span>CSS</li>
-              <li><span class="labels label-Javascript"></span>Javascript</li>
-              <li><span class="labels label-MySQL"></span>MySQL</li>
-              <li><span class="labels label-PHP"></span>PHP</li>
-              <li><span class="labels label-Wordpress"></span>Wordpress</li>
-            </ul>
-          </div>
-      </div>
+	  </div>
 
-      <div class="card center">
-          <legend name="sec_projects"><a name="sec_projects" class="number">4</a>Real-world Projects</legend>
-          <div class="projects">
-              <div><a target="_blank" href="http://huuvan20.github.io/responsive_layout/">
-                <img src="images/Responsive.JPG">
-                <label>Responsive Layout</label>
-                <p>Turning visual designs (visual mockups) into a functional web page.</p>
-                <p>Using mobile-first approach & responsive layout to build the page working well on different devices like mobile phones, tables, and desktop computers.</p>
-              </a></div>
-              <div><a target="_blank" href="http://huuvan20.github.io/Online-Registration/">
-                <img src="images/form.JPG">
-                <label>Online Registration Form</label>
-                <p>Building a responsive, mobile-friendly registration form to accept common types of user input like text information, email address, tel number and more.</p>
-                <p>Responsive also to mobile devices, tables and desktops.</p>
-              </a></div>
-              <div><a target="_blank" href="http://huuvan20.github.io/photo_gallery/">
-                <img src="images/photo_gallery.JPG">
-                <label>Interactive Photo Gallery</label>
-                <p>Creating an interactive photo gallery using JavaScript and JQuery. When an image is clicked, a large version pops-up on the screen.</p>
-                <p>Adding search functionality for specific images, videos & navigate through a slideshow using a keyboard</p>
-              </a></div>
-              <div><a target="_blank" href="http://huuvan20.github.io/css_to_sass/">
-                <img src="images/Responsive.JPG">
-                <label>CSS to Sass</label>
-                <p>Convert and refactor standard CSS code to Sass, keeping the codes organized and modular. Coding styles with Sass is even easier and faster</p>
-              </a></div>
-              <div><a target="_blank" href="http://huuvan20.github.io/svg_site_update/">
-                <img src="images/SVG.JPG">
-                <label>SVG Site Update</label>
-                <p>Optimize the web page  using SVG (scalable vector graphics) format because of its better performance.</p>
-                <p>Animating and interacting SVGs using CSS transitions, tranforms, and keyframe animations</p>
-              </a></div>
-              <div><a target="_blank" href="http://sportore.net">
-                <img src="images/sportore.JPG">
-                <label>E-commerce Wordpress</label>
-                <p>Installing and customizing the Bazar Wordpress theme to build an e-commerce page for selling football shoes</p>
-                <p>Embedding online payments methods of Ngan Luong and Bao Kim to the checkout page. Optimize the page speed using Cache plugins, CDN (content delivery network) of CloudFlare and more.<p>
-              </a></div>
-          </div>
-      </div>
+	  <div class="card">
+		  <legend><a name="sec_education" class="number">2</a>Education</legend>
+		  <time>2014 - 2015</time>
+		  <label>Master degree - Information Technology & Controls, Systems</label>
+		  <p>Grenoble Alpes University - Joshep Fourier University</p>
+		  <a target="_blank" href="images/master_degree.jpg"><img class="lb-img" src="images/master_degree.jpg" alt="Master degree of Controls, Systems and Information Technology"></a>
+
+		  <time>2007 - 2012</time>
+		  <label>Engineering degree - Telecommunications</label>
+		  <p>Ho Chi Minh city University of Technology - PFIEV program for excellent engineers</p>
+
+		  <legend name="sec_skills"><a name="sec_skills" class="number">3</a>Frontend & Backend skills</legend>
+		  <div class="pie-chart">
+			<div class="skills">
+			  <div class="pie" data-start="0" data-value="39"></div>
+			  <div class="pie" data-start="39" data-value="109"></div>
+			  <div class="pie" data-start="148" data-value="110"></div>
+			  <div class="pie" data-start="258" data-value="30"></div>
+			  <div class="pie" data-start="288" data-value="40"></div>
+			  <div class="pie" data-start="328" data-value="32"></div>
+			</div>
+			<ul class="skills-labels">
+			  <li><span class="labels label-HTML"></span>HTML & CSS</li>
+			  <li><span class="labels label-CSS"></span>PHP & CakePHP</li>
+			  <li><span class="labels label-Javascript"></span>JQuery & AJAX</li>
+			  <li><span class="labels label-MySQL"></span>Node.js</li>
+			  <li><span class="labels label-PHP"></span>Express</li>
+			  <li><span class="labels label-Wordpress"></span>Wordpress</li>
+			</ul>
+		  </div>
+	  </div>
+
+	  <div class="card center">
+		  <legend name="sec_projects"><a name="sec_projects" class="number">4</a>Real-world Projects</legend>
+		  <div class="projects">
+		  	  <div><a href="#">
+				<img src="images/jobbank.PNG">
+				<label>Job Bank Vietnam</label>
+				<p>An HR site from Prime Labo, mainly providing IT jobs in Vietnam</p>
+				<p>CakePHP 2 framework using MVC architecture. Currently under construction of changing theme of Job Monster. Coming soon...<p>
+			  </a></div>
+			  <div><a target="_blank" href="http://huuvan20.github.io/responsive_layout/">
+				<img src="images/Responsive.JPG">
+				<label>Responsive Layout</label>
+				<p>Turning visual designs (visual mockups) into a functional web page.</p>
+				<p>Using mobile-first approach & responsive layout to build the page working well on different devices like mobile phones, tables, and desktop computers.</p>
+			  </a></div>
+			  <div><a target="_blank" href="http://huuvan20.github.io/Online-Registration/">
+				<img src="images/form.JPG">
+				<label>Online Registration Form</label>
+				<p>Building a responsive, mobile-friendly registration form to accept common types of user input like text information, email address, tel number and more.</p>
+				<p>Responsive also to mobile devices, tables and desktops.</p>
+			  </a></div>
+			  <div><a target="_blank" href="http://huuvan20.github.io/photo_gallery/">
+				<img src="images/photo_gallery.JPG">
+				<label>Interactive Photo Gallery</label>
+				<p>Creating an interactive photo gallery using JavaScript and JQuery. When an image is clicked, a large version pops-up on the screen.</p>
+				<p>Adding search functionality for specific images, videos & navigate through a slideshow using a keyboard</p>
+			  </a></div>
+			  <div><a target="_blank" href="http://huuvan20.github.io/css_to_sass/">
+				<img src="images/Responsive.JPG">
+				<label>CSS to Sass</label>
+				<p>Convert and refactor standard CSS code to Sass, keeping the codes organized and modular. Coding styles with Sass is even easier and faster</p>
+			  </a></div>
+			  <div><a target="_blank" href="http://huuvan20.github.io/svg_site_update/">
+				<img src="images/SVG.JPG">
+				<label>SVG Site Update</label>
+				<p>Optimize the web page  using SVG (scalable vector graphics) format because of its better performance.</p>
+				<p>Animating and interacting SVGs using CSS transitions, tranforms, and keyframe animations</p>
+			  </a></div>
+			  
+		  </div>
+	  </div>
   </div>
 
   </main>
   <footer>
-    <ul>
-      <li><a href="https://twitter.com/HuuVanTran" class="social twitter">Twitter</a></li>
-      <li><a href="https://www.linkedin.com/in/tran-huu-van-4b78a277?trk=hp-identity-name" class="social linkedin">LinkedIn</a></li>
-      <li><a href="https://github.com/huuvan20" class="social github">Github</a></li>
-    </ul>
-    <p class="copyright">Copyright 2016, Van Tran</p>
+	<ul>
+	  <li><a href="https://twitter.com/HuuVanTran" class="social twitter">Twitter</a></li>
+	  <li><a href="https://www.linkedin.com/in/tran-huu-van-4b78a277?trk=hp-identity-name" class="social linkedin">LinkedIn</a></li>
+	  <li><a href="https://github.com/huuvan20" class="social github">Github</a></li>
+	</ul>
+	<p class="copyright">Copyright 2016, Van Tran</p>
   </footer>
 
 <script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
