fixed a bug of image

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		  <legend name="sec_projects"><a name="sec_projects" class="number">4</a>Real-world Projects</legend>
 		  <div class="projects">
 		  	  <div><a href="#">
-				<img src="images/jobbank.PNG">
+				<img src="images/jobbank.jpg">
 				<label>Job Bank Vietnam</label>
 				<p>An HR site from Prime Labo, mainly providing IT jobs in Vietnam</p>
 				<p>CakePHP 2 framework using MVC architecture. Currently under construction of changing theme of Job Monster. Coming soon...<p>
